--- a/index.html
+++ b/index.html
@@ -1040,6 +1040,244 @@
 
 
 
+
+								<section class="transport">						
+									<section class=numeroTransport class="etape"> 
+										Transport n°  <block class="nbTransport"></block>
+									</section>		
+									<section class="detail">
+										<img src="Xi'an-Chengdu.png" class="imgTransport">		
+										<section class="données" >		
+											<section class="detail1" class="etape"> 
+												<div class="titre">Trajet</div>
+												<li>Xi'an <img class="iconeTrajet" src="trajet.png">Chengdu	</li>						
+												<li>Train de nuit</li>
+												<li><input class="tempsEtape heure" value="10">heures</input></li>
+												<li><input  class="cout1" value="40" >€ le billet</input></li>
+											</section>		
+											<section class="nourriture">
+												<div class="titre">Nourriture</div>
+												<div>
+													<input  class="coutJour" value="34" >€ par jour</input>
+													</br>
+													<div class="total">
+													</br> Total
+													<input  class="cout2"  >€</input>
+													</div>
+												</div>
+											</section>		
+											<section class="achatBillet">
+												<div class="titre">Ou acheter le billet ?</div>
+												<div>
+													bla bla bla
+												</div>
+											</section>		
+											<div class="sansVisa">
+												<div class="titre"></div>
+												 <input  class="cout3" value="0" type="hidden"></input></li>
+												</div>		
+											<div class="recap">
+												<div class="titre">Cumul des trucs</div>
+												<li>Cout étape : <block class="coutEtape"></block>€</li>
+												<li>Cumul des dépenses : <block class="cumulDepense"></block>€</li>
+												<li>Temps passé depuis le départ : <block class="tempsCumul" ></block> jours</li>
+												<li>Kilomètre parcouru : <block class="distanceCumul" ></block> km</li>
+											</div>
+										</section>		
+										<section class="detailTransport">
+											<div class="titre">Détails</div>
+											<div class="donneesTransport2" ></div>
+										</section>		
+									</section>		
+									<section class="pays">
+										<div class="t11" >
+											<div  class="titrePays">Pays</div> 
+											<div class="donneesTransport">Chine</div> 
+										</div>
+									</section>		
+								</section>
+		
+	
+	
+	
+	
+	
+								<section class="ville" class="etape"> 				
+									<div class=sectionVille> 
+										<div class="titreVille">
+											Ville n° <div class="nbEtape"></div>
+										</div>
+										<div>Chengdu</div>
+									</div>	
+										<div class="info">
+											<div class="tempsVille">
+												<div class="titre">Temps sur place</div>
+												<input class="tempsEtape jour" value="2">jours </input>
+											</div>	
+											<div class="activiteVille">
+												<div class="titre">Activitées</div>
+												<div class="donneesVille2">
+													<li>Base de recherche sur les Pandas : 10€</li>
+													<li>Wenshu Yuan Monastere </li>
+													<li></li>
+													<li>Total  <input  class="cout1" value="10" >€</input></li>
+												</div>
+											</div>	
+											<section class="nourriture">
+												<div class="titre">Nourriture</div>
+												<div>
+													<input  class="coutJour" value="34" >€ par jour</input>
+													</br>
+													<div class="total">
+													</br> Total
+													<input  class="cout2"  >€</input>
+													</div>
+												</div>
+											</section>	
+											<div class="detailVille">
+												<div class="titre">Détails</div>
+												<div class="donneesVille2">   </div>
+												<input  class="cout3" value="0" >€</input>
+											</div>						
+											<div class="recapVille">
+												<div class="titre">Cumul des trucs</div>
+												<li>Cout étape : <block class="coutEtape"></block>€</li>
+												<li>Cumul des dépenses : <block class="cumulDepense"></block>€</li>
+												<li>Temps passé depuis le départ : <block class="tempsCumul" ></block> jours</li>
+												<li>Kilomètre parcouru : <block class="distanceCumul" ></block> km</li>
+											</div>
+										</div>	
+										<section class="paysVille">
+											<div class="t11" >
+												<div  class="titrePays">Pays</div> 
+												<div class="donneesTransport">Chine</div> 
+											</div>
+										</section>	
+									</section>
+
+
+
+
+
+
+									<section class="transport">						
+										<section class=numeroTransport class="etape"> 
+											Transport n°  <block class="nbTransport"></block>
+										</section>		
+										<section class="detail">
+											<img src="Chengdu-Guilin.png" class="imgTransport">		
+											<section class="données" >		
+												<section class="detail1" class="etape"> 
+													<div class="titre">Trajet</div>
+													<li>Chengdu <img class="iconeTrajet" src="trajet.png">Guilin	</li>						
+													<li>Train</li>
+													<li><input class="tempsEtape heure" value="7">heures</input></li>
+													<li><input  class="cout1" value="50" >€ le billet</input></li>
+												</section>		
+												<section class="nourriture">
+													<div class="titre">Nourriture</div>
+													<div>
+														<input  class="coutJour" value="34" >€ par jour</input>
+														</br>
+														<div class="total">
+														</br> Total
+														<input  class="cout2"  >€</input>
+														</div>
+													</div>
+												</section>		
+												<section class="achatBillet">
+													<div class="titre">Ou acheter le billet ?</div>
+													<div>
+														bla bla bla
+													</div>
+												</section>		
+												<div class="sansVisa">
+													<div class="titre"></div>
+													 <input  class="cout3" value="0" type="hidden"></input></li>
+													</div>		
+												<div class="recap">
+													<div class="titre">Cumul des trucs</div>
+													<li>Cout étape : <block class="coutEtape"></block>€</li>
+													<li>Cumul des dépenses : <block class="cumulDepense"></block>€</li>
+													<li>Temps passé depuis le départ : <block class="tempsCumul" ></block> jours</li>
+													<li>Kilomètre parcouru : <block class="distanceCumul" ></block> km</li>
+												</div>
+											</section>		
+											<section class="detailTransport">
+												<div class="titre">Détails</div>
+												<div class="donneesTransport2" ></div>
+											</section>		
+										</section>		
+										<section class="pays">
+											<div class="t11" >
+												<div  class="titrePays">Pays</div> 
+												<div class="donneesTransport">Chine</div> 
+											</div>
+										</section>		
+									</section>
+			
+		
+		
+		
+		
+		
+									<section class="ville" class="etape"> 				
+										<div class=sectionVille> 
+											<div class="titreVille">
+												Ville n° <div class="nbEtape"></div>
+											</div>
+											<div>Guilin</div>
+										</div>	
+											<div class="info">
+												<div class="tempsVille">
+													<div class="titre">Temps sur place</div>
+													<input class="tempsEtape jour" value="5">jours </input>
+												</div>	
+												<div class="activiteVille">
+													<div class="titre">Activitées</div>
+													<div class="donneesVille2">
+														<li>Rizière de Longji </li>
+														<li>Grotte de flute de roseau </li>
+														<li>Aller à Xingping</li>
+														<li>Rivière de Li</li>
+														<li>Total  <input  class="cout1" value="60" >€</input></li>
+													</div>
+												</div>	
+												<section class="nourriture">
+													<div class="titre">Nourriture</div>
+													<div>
+														<input  class="coutJour" value="34" >€ par jour</input>
+														</br>
+														<div class="total">
+														</br> Total
+														<input  class="cout2"  >€</input>
+														</div>
+													</div>
+												</section>	
+												<div class="detailVille">
+													<div class="titre">Détails</div>
+													<div class="donneesVille2">   </div>
+													<input  class="cout3" value="0" >€</input>
+												</div>						
+												<div class="recapVille">
+													<div class="titre">Cumul des trucs</div>
+													<li>Cout étape : <block class="coutEtape"></block>€</li>
+													<li>Cumul des dépenses : <block class="cumulDepense"></block>€</li>
+													<li>Temps passé depuis le départ : <block class="tempsCumul" ></block> jours</li>
+													<li>Kilomètre parcouru : <block class="distanceCumul" ></block> km</li>
+												</div>
+											</div>	
+											<section class="paysVille">
+												<div class="t11" >
+													<div  class="titrePays">Pays</div> 
+													<div class="donneesTransport">Chine</div> 
+												</div>
+											</section>	
+										</section>
+
+
+
+
 	</body>
 
 </html>	
